  * bts: rejuvenate the close command (closes: #245956)
  * bts: fix typo (closes: #268608)
  * debchange: fixed pipe error (closes: #228749)
  * debchange: requires perl >= 5.8, so make this a Depends: in the
    control file (will be standard in sarge anyway, so it's not a
    particularly big deal) (closes: #241138)
  * debuild: correctly count the saved envvars (closes: #268985)
  * uscan: support version numbers with ~ (change Devscripts::Versort to
    simply call dpkg --compare-versions to do the work) (closes: #232286)
  * wnpp-alert: now correctly reports on orphaned packages as well
    (tweaked some sed scripts; don't know what was actually wrong :-/ )
    (closes: #268948)

 -- Julian Gilbey <jdg@debian.org>  Mon, 30 Aug 2004 10:15:28 +0100

devscripts (2.8.4) unstable; urgency=medium

  * The Barbrady release ("Move along people, there's NOTHING TO SEE here..")
  * Add build-depends on the perl packages that perl -c needs to do its thing.
    Thanks Anibal Monsalve Salazar for pointing this out. Closes: #266847

 -- Joshua Kwan <joshk@triplehelix.org>  Thu, 19 Aug 2004 09:13:14 -0700

devscripts (2.8.3) unstable; urgency=medium

  * The "timely bug report" release.
  * uupdate.sh: [ $# ne 0 ] -> [ $# -ne 0 ]. Thanks Fumitoshi UKAI.
    (Closes: #266221)
  * Run perl -c on all the Perl scripts and sh -n on all of the shell
    scripts, in foresight of future syntax errors.
  * tagpending.sh: Add a space after the source package name. Thanks Guillem
    Jover for pointing this out.
  * Remove the last remnants of the abandoned debpanic script from debi.pl.
  * bts.pl: Fix gooood crack in 'it' usage. ($it eq undef -> not defined $it.)
    (Closes: #266717)

 -- Joshua Kwan <joshk@triplehelix.org>  Wed, 18 Aug 2004 01:28:37 -0700

devscripts (2.8.2) unstable; urgency=low

  * tagpending.sh:
      - s/help/usage/. Another buglet found by Steve Kowalik. Sigh!
        (Closes: #265412)
      - Include the source package name in the 'package' portion of