@@ -14,6 +14,10 @@ those from being re-tagged in the email.
 .B \-n
 Do not actually send an email, but print it to stdout.
 .TP
+.B \-f
+Do not query the BTS for already tagged bugs, that is, force all bugs to
+be tagged as pending even if they already are.
+.TP
 .B \-\-help, \-h
 Show a brief usage message.
 .TP
